Fix z-index order

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 header {
   position: sticky;
   top: 0;
+  z-index: 9;
 }
 
 main {
