--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -21,6 +21,7 @@ span {
     background-color: orange;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .hidden {
